swdv660_week3_template_jz.yml
Description: 'Effective DevOps in AWS: HelloWorld web application'
Outputs:
  InstancePublicIp:
    Description: Public IP of our instance.
    Value: !GetAtt 
      - instance
      - PublicIp
  WebUrl:
    Description: Application endpoint
    Value: !Join 
      - ''
      - - 'http://'
        - !GetAtt 
          - instance
          - PublicDnsName
        - ':'
        - '3333'
Parameters:
  KeyPair:
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
    Description: Name of an existing EC2 KeyPair to SSH
    Type: 'AWS::EC2::KeyPair::KeyName'
Resources:
  SecurityGroup:
    Properties:
      GroupDescription: Allow SSH and TCP/3333 access
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: '22'
          IpProtocol: tcp
          ToPort: '22'
        - CidrIp: 0.0.0.0/0
          FromPort: '3333'
          IpProtocol: tcp
          ToPort: '3333'
    Type: 'AWS::EC2::SecurityGroup'
  instance:
    Properties:
      ImageId: ami-cfe4b2b0
      InstanceType: t2.nano
      Tags:
        - Key: Name
          Value: WebServer-jz
      KeyName: !Ref KeyPair
      SecurityGroups:
        - !Ref SecurityGroup
      UserData: !Base64 
        'Fn::Join':
          - |+

          - - '#!/bin/bash'
            - sudo yum install --enablerepo=epel -y nodejs
            - 'wget https://raw.githubusercontent.com/jzaiss1/swdv660-week2-web-app/master/app/helloworld.js -O /home/ec2-user/helloworld.js'
            - 'wget https://raw.githubusercontent.com/jzaiss1/swdv660-week2-web-app/master/app/helloworld.conf -O /etc/init/helloworld.conf'
            - start helloworld
    Type: 'AWS::EC2::Instance'
